--- a/force-app/main/default/classes/VariablesDataTypesOperators.cls
+++ b/force-app/main/default/classes/VariablesDataTypesOperators.cls
@@ -176,7 +176,11 @@ public with sharing class VariablesDataTypesOperators {
      * @return True if the date is today or in the future, False otherwise.
      */
     public static Boolean isDateTodayOrFuture(Date dt) {
-        return null; // Replace null with the variable you used to store the result
+        boolean dateCheck;
+        if (dt >= date.today()) {
+            return dateCheck = true;
+        } return dateCheck =  false;
+        
     }
 
     /**
@@ -189,9 +193,10 @@ public with sharing class VariablesDataTypesOperators {
      * @return The number of milliseconds equivalent to the given number of minutes.
      */
     public static Integer convertMinutesToMilliseconds(Integer minutes) {
-        Integer MILLISECONDS_PER_MINUTE = null; // Make this value a constant
+        final Integer MILLISECONDS_PER_MINUTE = 60000; // Make this value a constant
         Integer milliseconds;
-        return null; // Replace null with the variable you used to store the result
+        
+        return milliseconds = minutes * MILLISECONDS_PER_MINUTE;
     }    
 
     /**
